# pkgj-retroarch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  README.md  build.sh  conanfile.py  cross.cmake  host.cmake  send_to_linux.sh
.github/workflows/: build.yml  release.yml  test.yml
ci/: README.md  pyproject.toml  setup_conan.sh
ci/conan/: settings.yml
ci/conan-bzip2/: conanfile.py
ci/conan-libzip/: conandata.yml  conanfile.py
ci/conan-vitasdk/: conanfile.py
ci/conan-vitasdk-docker/: conanfile.py
ci/conan/profiles/: vita
docs/superpowers/plans/: 2026-07-11-data-driven-systems-and-tests.md  2026-07-11-native-vita-games-3a.md
docs/superpowers/specs/: 2026-07-11-data-driven-systems-and-tests-design.md  2026-07-11-native-vita-games-nopaystation-design.md
simulator/: bgdl_stub.cpp  imgui_sdl.cpp  install_stub.cpp  sdl_backend.cpp  sim_file.cpp  update_stub.cpp  vitahttp_stub.cpp
src/: annotationdb.cpp  annotationdb.hpp  browserview.cpp  browserview.hpp  cli.cpp  comppackdb.cpp  config.cpp  config.hpp  config_url.cpp  configeditor.cpp  configeditor.hpp  curlhttp.cpp  curlhttp.hpp  customhandler.cpp  customhandler.hpp  db.cpp  db.hpp  descriptionfetcher.cpp  descriptionfetcher.hpp  dialog.cpp  download.cpp  downloader.cpp  downloader.hpp  filedownload.cpp  filedownload.hpp  filehttp.cpp  gameview.cpp  gameview.hpp  imagefetcher.cpp  imagefetcher.hpp  install.cpp  install.hpp  jsonscan.cpp  jsonscan.hpp  log.hpp  logbuffer.cpp  logbuffer.hpp  logviewer.cpp  logviewer.hpp  menu.cpp  (+22 more)
tests/: CMakeLists.txt  run.sh  test_config_url.cpp  test_jsonscan.cpp  test_npstsv.cpp  test_romcache.cpp  test_smoke.cpp  test_systems.cpp
tests/fixtures/: archive_metadata.json  nps_psv_games.tsv
